# WebAgent

./: Project Overview Presentation.pptx  README.md  action_generator.py  agent.py  browser_executor.py  dashboard.py  diagrams.md  dreamer_model.py  eval.py  eval_results.json  llm_call.py  main.py  planning.py  plot_results.py  pyproject.toml  reflexion.py  run_dashboard.sh  sentinel.py  session_memory.py  slides.md
.mplconfig/: fontlist-v390.json
static/: index.html
